--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "backend",
+  "name": "pettycash-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "express": "^5.2.1",
+    "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.10.1"
+    "graphql": "^16.6.0",
+    "mongoose": "^7.6.0"
   }
 }
