--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,16 @@
-FROM node:18
+FROM node:18-alpine
 
 WORKDIR /app
 
+# Copy package.json dan install dependencies
 COPY package*.json ./
 RUN npm install
 
+# Copy seluruh source code
 COPY . .
 
+# Expose port aplikasi
 EXPOSE 4000
 
-CMD ["node", "src/index.js"]
+# Jalankan aplikasi
+CMD ["npm", "start"]
